--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ body {
     padding: 0;
     font-size: 1.6rem;
     font-family: 'Roboto', sans-serif;
+    background-color: #FFCC66;
 }
 
 span, label {
@@ -69,5 +70,46 @@ span {
 }
 .no-wrap {
     white-space: nowrap;
+}
+
+nav {
+    margin: 0px;
+    padding: 0px;
+    position: fixed;
+    display: flex;
+    width: 100vw;
+    height: 6.4rem;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1.6rem;
+    max-width: 100%;
+    background-color: #006699;
+}
+
+#mobile-nav-menu {
+    display: none;
+}
+.hamburger {
+    display: none;
+}
+
+#nav-menu {
+    margin: 0px;
+    padding: 0px;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1.6rem;
+}
+.nav-item {
+    margin-left: 4.8rem;
+}
+
+
+nav  a {
+    text-decoration: none;
+    color: #f8f8f8
+
 }
 
