--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,7 @@ nav  a {
     padding: 1.2rem 2.4rem;
     margin-right: 3.2rem;
     border-radius: 2.4rem;
-    background-color: #FF6666;
+    background-color: #006699;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, .16);
     border: none;
     cursor: pointer;
