--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,9 @@ html {
     -webkit-box-sizing: border-box;
     -webkit-text-size-adjust: 100%;
 }
+.tools-col__content.hidden {
+    background-color: transparent;
+}
 
 body {
     margin: 0;
@@ -133,30 +136,39 @@ nav  a {
 
 }
 
+
+
+
+
+
+
 #hero {
     height: var(--app-height);
-    min-height: 65rem;
+    min-height: 70rem;
     width: 100vw;
     max-width: 100%;
 }
 
 .hero__col-1 {
-    text-align: justify;
     min-height: 100vh;
     display: flex;
     align-items: center;
-   
+    justify-content: center;
+    margin: 0 1.6rem;
     padding: 0 1.6rem;
 }
-.hero__col-1 > h2 {
-    margin-bottom: 2.4rem;
-}
 .hero__col-1  p , span {
-    margin-top: 3.2rem;
     font-size: 2.4rem;
     line-height: 3.2rem;
 }
-.img-container {
+.hero__col-1 h2 {
+    margin-bottom: 1.6rem;
+}
+#leo{
+    font-size: 4rem;
+    color: #006699;
+}
+.profile-img-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -167,20 +179,27 @@ nav  a {
     height: 350px;
 
 }
+.profile-img {
+    height: 475px;
+}
 .hero__content {
-    margin-left: 3.2rem;
-    padding: 10rem;
+    margin: 1.6rem 0 0 5.6rem;
+    max-width: 100%;
+   
 }
 .hero__nav-menu {
-    margin-top: 3.2rem;
+    display: flex;
+    padding: 1.6rem 0;
+}
+.hero__link-container {
     display: flex;
 }
 .hero__link {
     display: flex;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     background-color: white;
-    margin-right: 1.6rem;
+    margin: 0 0.8rem;
     border-radius: 0.8rem;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, .16);
     transition: 0.3s;
@@ -195,8 +214,9 @@ nav  a {
     margin: auto;
 }
 #resume-btn {
-    padding: 1.2rem 2.4rem;
+    padding: 1.2rem 3.6rem;
     margin-right: 3.2rem;
+    margin-bottom: 1.6rem;
     border-radius: 2.4rem;
     background-color: #006699;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, .16);
@@ -208,9 +228,7 @@ nav  a {
     box-shadow: 0px 3px 6px rgba(0, 0, 0, .6);
     transition: 0.3s;
 }
-.profile-img {
-    height: 475px;
-}
+
 .col-2 {
     z-index: -1;
     position: relative;
@@ -219,9 +237,6 @@ nav  a {
     z-index: 1;
     background-color: #FF6666;
     padding: 0 1.6rem;
-
-  
-
 }
 .skills-box {
     z-index: 1;
@@ -233,8 +248,10 @@ nav  a {
     background-color: #FF6666;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, .16); 
 }
-.container {
+.skills-container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 .skills-box > .container .skills__col:nth-child(1) {
@@ -250,6 +267,13 @@ nav  a {
 .col__content {
     text-align: center;
     padding: 0 1.6rem;
+}
+.col__content p {
+    font-size: 2.4rem;
+}
+.col__content h4 {
+    font-size: 3.2rem;
+    padding-bottom: 1.6rem;
 }
 .skills__img > img {
     height: 6.4rem;
@@ -273,7 +297,12 @@ nav  a {
     overflow: hidden;
     width: 150px;
     height: 150px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, .3);
 }
+.tools-col__content p {
+    font-size: 1.6rem;
+}
+
 .container-2 {
     padding-top: 5rem;
     padding-bottom: 5rem;
@@ -283,6 +312,10 @@ nav  a {
     align-items: center;
     flex-direction: column;
     margin: auto;
+}
+.container-2 h4 {
+    font-size: 3.2rem;
+    margin-bottom: 1.6rem;
 }
 .grid-container {
     display: flex;
@@ -294,6 +327,74 @@ nav  a {
     width: 50%;
     height: 50%;
 }
+
+
+#projects-section {
+    padding: 8rem;
+}
+
+.projects-section__head {
+    margin-bottom: 5rem;
+}
+.projects-container {
+    display: flex;
+    flex-direction: column;
+    background-color: #006699;
+    border-radius: 1.6rem;
+    padding: 4.8rem;
+    
+}
+
+.project-item {
+    display: flex;
+    padding: 1.6rem;
+    border-radius: 1.5rem;
+    background-color: #005681;
+    margin-bottom: 3.2rem;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, .3);
+}
+.project-item__img-container {
+    flex: 0 0 50%;
+    height: auto;
+    border-radius: 1rem;
+}
+.project-item__img-container img {
+    width: 100%;
+    border-radius: 0.8rem;
+}
+
+.project-item-description {
+    margin-left: 3.2rem;
+    color: #f8f8f8;
+    flex: 0 1 calc(100% - 350px);
+}
+
+.project-item-description > h4 {
+    font-size: 1.8rem;
+    line-height: 2rem;
+
+    color: #f8f8f8;
+}
+.project-item-description h4 > span {
+    color: #FF6666;
+    font-size: 1.8rem;
+}
+ul {
+    list-style: disc inside;
+    line-height: 2.4rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media only screen and (max-width: 992.98px) {
 
@@ -346,8 +447,7 @@ nav  a {
         transition: 0.3s;
         background-color: #006699;
     }
-    .nav-item {
-    }
+
     .nav-item a {
         text-decoration: none;
         color: #f8f8f8;
@@ -370,7 +470,7 @@ nav  a {
         opacity: 1;
     }
     .nav-overlay {
-        z-index: 2;
+        z-index: -1;
         opacity: 0;
         position: fixed;
         background-color: rgb(20, 20, 20); 
@@ -384,28 +484,51 @@ nav  a {
         opacity: 0.75;
         transition: 0.6s;
     }
+    #hero {
+        max-height: 70rem;
+    }
+    #leo{
+        font-size: 2.4rem;
+    }
     .hero__col-1 {
         padding-top: 10rem;
         flex-direction: column;
         justify-content: flex-start;
+
+    }
+    .hero__content {
+        text-align: center;
+        padding: 0 1.6rem 0 1.6rem;
+        margin: 0 0 0 0 ;
     }
     .hero__col-1  h2 {
         font-size: 2.4rem;
         line-height: 3.2rem;
     }
-    .hero__col-1 > p , span {
+    .hero__col-1  p , span {
         font-size: 1.6rem;
         line-height: 2.4rem;
     }
-    .img-container {
- 
+    .profile-img-container {
         min-width: 250px;
         width: 250px;
         height: 250px;
+        margin-bottom: 3.2rem;
     
     }
     .profile-img {
         height: 325px;
+    }
+
+    .hero__nav-menu {
+        flex-direction: column;
+        align-items: center;
+    }
+    .hero__link-container {
+        justify-content: center;
+    }
+    #resume-btn {
+        margin-right: 0;
     }
     .container {
         flex-direction: column;
@@ -414,7 +537,31 @@ nav  a {
         flex-basis: auto;
         width: auto;
     }
-    
+    .col__content p {
+        font-size: 1.6rem;
+    }
+    .col__content h4 {
+        font-size: 2.4rem;
+        padding-bottom: 1.6rem;
+    }
+    .container-2 h4 {
+        font-size: 2.4rem;
+    }
+    .tools-col__content {
+        width: 100px;
+        height: 100px;
+    }
+    .project-item {
+        flex-direction: column;
+    }
+    .project-item-description {
+        margin-left: 0;
+    }
+    .project-item-description h3 {
+        font-size: 2.8rem;
+    }
+
+
 }
 
 @media only screen and (max-width: 768px) {
@@ -428,18 +575,45 @@ nav  a {
         width: 100vw;
         max-width: 100%;
     }
-    .img-container {
+    .profile-img-container {
         width: 200px;
         min-width: 200px;
         height: 200px;
-    
+        margin-bottom: 1.6rem;
+
     }
     .profile-img {
         height: 275px;
     }
     .tools-col__content {
-        width: 100px;
-        height: 100px;
+        width: 75px;
+        height: 75px;
     }
+    .tools-col__content p {
+        font-size: 1.2rem;
+    }
+
+    
+    #projects-section {
+        padding: 0;
+        background-color: transparent;
+    }
+    
+    .projects-container {
+        display: block;
+        padding: 1.6rem;
+    }
+    /*
+    .project-item__img-container {
+        max-width: 500px;
+        margin: 0 auto;
+        height: auto;
+    }
+    */
+
+}
+
+@media only screen and (max-width: 350px) {
+
 }
 
