--- a/css/styles.css
+++ b/css/styles.css
@@ -383,6 +383,29 @@ ul {
     list-style: disc inside;
     line-height: 2.4rem;
 }
+.project-links {
+    color: #444;
+    text-decoration: none;
+    margin-top: 1.6rem;
+
+}
+.project-links a {
+    font-size: 1.2rem;
+    padding: 0.8rem 1.2rem;
+    border-radius: 1.6rem;
+    background-color: #FF6666;
+    margin-right: 1.6rem;
+    cursor: pointer;
+    transition: 0.3s;
+    font-weight: bold;
+    color: #444;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, .16)
+}
+.project-links a:hover {
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, .3);
+    transition: 0.3s;
+}
+
 
 
 
@@ -595,7 +618,7 @@ ul {
 
     
     #projects-section {
-        padding: 0;
+        padding: 5rem 0 0 1.6rem;
         background-color: transparent;
     }
     
