--- a/css/styles.css
+++ b/css/styles.css
@@ -471,7 +471,7 @@ input[type=text], select, textarea {
   }
   
   /* Style the submit button with a specific background color etc */
-  input[type=submit] {
+  .submit-form-btn {
     background-color: #FF6666;
     color: #444;
     padding: 12px 20px;
@@ -483,7 +483,7 @@ input[type=text], select, textarea {
   }
   
   /* When moving the mouse over the submit button, add a darker green color */
-  input[type=submit]:hover {
+  .submit-form-btn:hover {
     background-color: #fc7575;
   }
   
